// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input[Base] should render correctly  1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about autoSelect 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value="hello world"
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about disabled 1`] = `
<div>
  <div
    class="soui-input-group soui-input-group-seperate soui-input-group-disabled"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper soui-input-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          disabled=""
          placeholder="first name"
          value=""
        />
      </div>
    </div>
    <span>
      -
    </span>
    <div
      class="soui-input soui-input-wrapper soui-input-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          disabled=""
          placeholder="last name"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper soui-input-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        disabled=""
        placeholder="disabled input"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about enter 1`] = `
<div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="onKeyUp"
          value=""
        />
      </div>
    </div>
    <b
      class="onKeyUp"
    >
      onKeyUp: 0 times
    </b>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="onKeyDown"
          value=""
        />
      </div>
    </div>
    <b
      class="onKeyDown"
    >
      onKeyDown: 0 times
    </b>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="onEnterPress"
          value=""
        />
      </div>
    </div>
    <b
      class="onEnterPress"
    >
      onEnterPress: 0 times
    </b>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about group 1`] = `
<div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <b>
      http://
    </b>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
    <b>
      .com
    </b>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <b>
      http://
    </b>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
    <b>
      .com
    </b>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
    <div
      style="line-height: 30px;"
    >
      -
    </div>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
  </div>
  <h3
    style="margin-bottom: 12px; font-size: 16px;"
  >
    Other Size
  </h3>
  <div
    class="soui-input-group soui-input-group-seperate soui-input-group-small"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <b>
      http://
    </b>
    <div
      class="soui-input soui-input-wrapper soui-input-wrapper-small"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="email"
          value=""
        />
      </div>
    </div>
    <b>
      .com
    </b>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate soui-input-group-large"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <b>
      http://
    </b>
    <div
      class="soui-input soui-input-wrapper soui-input-wrapper-large"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="email"
          value=""
        />
      </div>
    </div>
    <b>
      .com
    </b>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about innerTitle 1`] = `
<div
  style="width: 300px; display: flex; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-input-wrapper-inner-title soui-input soui-input-wrapper soui-input-wrapper-small"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <div
        class="soui-inner-title-wrapper soui-inner-title-wrapper-small"
      >
        <div
          class="soui-inner-title-title soui-inner-title-top"
        >
          Small title
        </div>
        <div
          class="soui-inner-title-place"
        >
          <div
            class="soui-inner-title-title"
          >
            Small title
          </div>
        </div>
        <div
          class="soui-inner-title-content"
        >
          <input
            class="soui-input-input"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-input-wrapper-inner-title soui-input soui-input-wrapper"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <div
        class="soui-inner-title-wrapper"
      >
        <div
          class="soui-inner-title-title soui-inner-title-top"
        >
          Medium Title
        </div>
        <div
          class="soui-inner-title-place"
        >
          <div
            class="soui-inner-title-title"
          >
            Medium Title
          </div>
        </div>
        <div
          class="soui-inner-title-content"
        >
          <input
            class="soui-input-input"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-input-wrapper-inner-title soui-input soui-input-wrapper soui-input-wrapper-large"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <div
        class="soui-inner-title-wrapper soui-inner-title-wrapper-large"
      >
        <div
          class="soui-inner-title-title soui-inner-title-top"
        >
          Large Title
        </div>
        <div
          class="soui-inner-title-place"
        >
          <div
            class="soui-inner-title-title"
          >
            Large Title
          </div>
        </div>
        <div
          class="soui-inner-title-content"
        >
          <input
            class="soui-input-input"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about limit 1`] = `
<div
  style="width: 300px;"
>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="margin-bottom: 24px;"
  >
    <b
      class="min"
    >
      min
    </b>
    <div
      class="soui-input-wrapper-number soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="100"
          type="text"
          value=""
        />
      </div>
      <div
        class="soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="margin-bottom: 24px;"
  >
    <b
      class="max"
    >
      max
    </b>
    <div
      class="soui-input-wrapper-number soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="200"
          type="text"
          value=""
        />
      </div>
      <div
        class="soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-input-group soui-input-group-seperate"
    data-soui-role="input-group-seperate"
    dir="ltr"
    style="margin-bottom: 24px;"
  >
    <b
      class="maxLength"
    >
      maxLength
    </b>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          maxlength="5"
          placeholder="5"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about number 1`] = `
<div
  style="width: 300px;"
>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits undefined"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 0"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 1"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 2"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="non-negative"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="integerLimit 3"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 3; autoFix"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="positive;integerLimit 3"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input-wrapper-number soui-input soui-input-wrapper"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="positive; integerLimit 3"
        type="text"
        value=""
      />
    </div>
    <div
      class="soui-input-number-step"
    >
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about number 2`] = `
<div
  class="soui-gap soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-input-group soui-input-group-seperate"
      data-soui-role="input-group-seperate"
      dir="ltr"
      style="width: 300px;"
    >
      <a
        class="soui-link soui-link-wrapper soui-link-secondary"
        style="cursor: pointer; padding: 0px 8px; border-radius: 4px 0 0 4px;"
      >
        <div
          style="width: 16px; height: 16px;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.6776 11C21.3621 11 21.917 11.4477 21.917 12C21.917 12.5128 21.4385 12.9355 20.8221 12.9933L20.6776 13H3.32538C2.64085 13 2.08594 12.5523 2.08594 12C2.08594 11.4872 2.56441 11.0645 3.18083 11.0067L3.32538 11H20.6776Z"
            />
          </svg>
        </div>
      </a>
      <div
        class="soui-input soui-input-wrapper"
        data-soui-input-border="true"
      >
        <div
          class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
        >
          <input
            class="soui-input-input"
            placeholder="please enter"
            type="text"
            value=""
          />
        </div>
      </div>
      <a
        class="soui-link soui-link-wrapper soui-link-secondary"
        style="cursor: pointer; padding: 0px 8px; border-radius: 0 4px 4px 0;"
      >
        <div
          style="width: 16px; height: 16px;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M11.8185 2.09595C12.3708 2.09595 12.8185 2.54366 12.8185 3.09595V10.8181H20.9041C21.4564 10.8181 21.9041 11.2658 21.9041 11.8181C21.9041 12.3704 21.4564 12.8181 20.9041 12.8181H12.8185V20.904C12.8185 21.4563 12.3708 21.904 11.8185 21.904C11.2662 21.904 10.8185 21.4563 10.8185 20.904V12.8181H3.10059C2.5483 12.8181 2.10059 12.3704 2.10059 11.8181C2.10059 11.2658 2.5483 10.8181 3.10059 10.8181H10.8185V3.09595C10.8185 2.54366 11.2662 2.09595 11.8185 2.09595Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </a>
    </div>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-input-wrapper-number soui-input soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 300px;"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          type="text"
          value=""
        />
      </div>
      <div
        class="soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about password 1`] = `
<form
  class="soui-form soui-form-wrapper"
>
  <div
    class="soui-input soui-input-wrapper soui-input-password"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="input password"
        type="text"
        value=""
      />
      <span
        class="soui-input-password-toggle"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M22.8218 11.5706C22.7892 11.4991 22.0167 9.78389 20.3103 8.07746C18.0271 5.79781 15.1495 4.59229 11.9748 4.59229C8.80003 4.59229 5.92247 5.79781 3.64194 8.07746C1.93551 9.78389 1.16299 11.4991 1.12771 11.5706C1.06797 11.706 1.03711 11.8524 1.03711 12.0005C1.03711 12.1485 1.06797 12.2949 1.12771 12.4304C1.16034 12.5027 1.93286 14.2171 3.64017 15.9235C5.92247 18.2032 8.80003 19.4078 11.9748 19.4078C15.1495 19.4078 18.0271 18.2032 20.3067 15.9235C22.014 14.2171 22.7866 12.5027 22.8192 12.4304C22.8794 12.2951 22.9107 12.1488 22.9111 12.0008C22.9116 11.8527 22.8812 11.7062 22.8218 11.5706ZM18.7599 14.4808C16.8665 16.345 14.5842 17.2913 11.9748 17.2913C9.36531 17.2913 7.08302 16.345 5.19227 14.4799C4.44828 13.7437 3.80829 12.9094 3.29007 12C3.80844 11.0911 4.44841 10.257 5.19227 9.52109C7.0839 7.65504 9.36531 6.70879 11.9748 6.70879C14.5842 6.70879 16.8657 7.65504 18.7573 9.52109C19.5012 10.257 20.1412 11.091 20.6595 12C20.1412 12.9093 19.5012 13.7436 18.7573 14.4799L18.7599 14.4808ZM11.9748 8.11979C11.2073 8.11979 10.4571 8.34736 9.81903 8.77373C9.18092 9.2001 8.68358 9.80611 8.38989 10.5151C8.09621 11.2242 8.01936 12.0043 8.16909 12.757C8.31881 13.5097 8.68836 14.2011 9.23103 14.7438C9.77369 15.2865 10.4651 15.656 11.2178 15.8057C11.9705 15.9555 12.7507 15.8786 13.4597 15.5849C14.1687 15.2912 14.7747 14.7939 15.2011 14.1558C15.6275 13.5177 15.855 12.7675 15.855 12C15.8539 10.9713 15.4447 9.98501 14.7172 9.25758C13.9898 8.53014 13.0035 8.12095 11.9748 8.11979ZM11.9748 13.7638C11.6259 13.7638 11.2849 13.6603 10.9949 13.4665C10.7048 13.2727 10.4788 12.9973 10.3453 12.675C10.2118 12.3527 10.1769 11.9981 10.2449 11.6559C10.313 11.3138 10.481 10.9995 10.7276 10.7529C10.9743 10.5062 11.2886 10.3382 11.6307 10.2702C11.9728 10.2021 12.3275 10.2371 12.6497 10.3705C12.972 10.504 13.2475 10.7301 13.4413 11.0202C13.6351 11.3102 13.7385 11.6512 13.7385 12C13.7385 12.4678 13.5527 12.9164 13.2219 13.2472C12.8912 13.578 12.4426 13.7638 11.9748 13.7638Z"
          />
        </svg>
      </span>
    </div>
  </div>
</form>
`;

exports[`Input[Base] should render correctly about size 1`] = `
<div
  style="width: 100%; display: flex; align-items: center; gap: 24px; flex-wrap: wrap;"
>
  <div
    class="soui-input soui-input-wrapper soui-input-wrapper-small"
    data-soui-input-border="true"
    style="width: 240px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="small size"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="width: 240px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="default size"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper soui-input-wrapper-large"
    data-soui-input-border="true"
    style="width: 240px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="large size"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about tip 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about trim 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about underline 1`] = `
<div
  class="soui-input soui-input-wrapper soui-input-wrapper-underline"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="Underline"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about validate 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="email"
      value=""
    />
  </div>
</div>
`;
